@@ -1,3 +1,12 @@
+Sat Jul 22 23:22:27 EDT 2006
+
+	Fix extra varm bug.
+
+Sat Jul 22 22:51:25 EDT 2006
+
+	Don't depend on strtod to convert from hex in umath.c.  Strtod does
+	this only in glibc.
+
 Thu Jul 20 15:23:23 EDT 2006
 
 	Fix $# in shell highlighter.
